2002-06-18  Phil Edwards  <pme@gcc.gnu.org>
	* configure:  For in-source builds, make a subdir and re-exec there.
	* Makefile:  New file.  Pass targets through to build directory.
	* .cvsignore:  No longer ignore "Makefile".


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@54759 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2002-06-18  Phil Edwards  <pme@gcc.gnu.org>
+
+	* configure:  For in-source builds, make a subdir and re-exec there.
+	* Makefile:  New file.  Pass targets through to build directory.
+	* .cvsignore:  No longer ignore "Makefile".
+
 2002-06-16  Douglas Rupp  <rupp@gnat.com>
 
 	* MAINTAINERS (Write After Approval): Add self.
