* g++.dg/opt/vt1.C: Fix regexp.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@54781 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-06-19  Jakub Jelinek  <jakub@redhat.com>
+
+	* g++.dg/opt/vt1.C: Fix regexp.
+
 2002-06-18  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* gcc.c-torture/execute/pure-1.c: Make functions static again.
