--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-06-19  Mark Mitchell  <mark@codesourcery.com>
+
+	* Makefile.in (QMTEST_DIR): Simplify definition.
+
 2002-06-19  Nick Clifton  <nickc@cambridge.redhat.com>
 
 	* config/d30v/d30v.h (CUMULATIVE_ARGS): Replace typedef with
