--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,14 @@
+2002-06-19  Ian Dall  <ian@sibyl.beware.dropbear.id.au>
+
+	* config/ns32k/ns32k.md: Give "*xxx" names to all unnamed insn's.
+	(sCOND): Restrict operand class so that gcc knows how to reload them.
+	(bitfield_set): Merge two unnamed insn's using alternatives.
+	(call_value): Remove constraint on unused uperand.
+	(udivmodhi4, udivmodsi4, udivmoddihi4_internal): Remove.
+	(udivmoddiqi4_internal, udivmoddihi4, udivmoddiqi4): Remove.
+ 
+	* longlong.h (count_trailing_zeros): Escape newline and beautify.
+
 2002-06-19  Mark Mitchell  <mark@codesourcery.com>
 
 	* Makefile.in (QMTEST_DIR): Simplify definition.
@@ -30,7 +41,7 @@
 	(_cpp_replacement_text_len, _cpp_copy_replacement_text): New.
 
 2002-06-18  Hans-Peter Nilsson  <hp@axis.com>
-            Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+	    Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* config/fp-bit.c (_fpmul_parts, _fpdiv_parts): Mark with
 	attribute __always_inline__.
@@ -219,7 +230,7 @@ Sun Jun 16 22:16:10 CEST 2002  Jan Hubicka  <jh@suse.cz>
 
 2002-06-16  Richard Henderson  <rth@redhat.com>
 
-        * vax.md (casesi): Use emit_jump_insn.  Tidy expander pattern.
+	* vax.md (casesi): Use emit_jump_insn.  Tidy expander pattern.
 
 2002-06-16  Richard Henderson  <rth@redhat.com>
 
@@ -295,16 +306,16 @@ Sun Jun 16 22:16:10 CEST 2002  Jan Hubicka  <jh@suse.cz>
 
 2002-06-15  Aldy Hernandez  <aldyh@redhat.com>
 
-        * tm.texi (MEMBER_TYPE_FORCES_BLK): Document MODE argument.
+	* tm.texi (MEMBER_TYPE_FORCES_BLK): Document MODE argument.
 
-        * stor-layout.c (compute_record_mode): Remove check for
-        FUNCTION_ARG_REG_LITTLE_ENDIAN and VOIDmode when checking for
-        MEMBER_TYPE_FORCES_BLK.  Pass new mode field to
-        MEMBER_TYPE_FORCES_BLK.
+	* stor-layout.c (compute_record_mode): Remove check for
+	FUNCTION_ARG_REG_LITTLE_ENDIAN and VOIDmode when checking for
+	MEMBER_TYPE_FORCES_BLK.  Pass new mode field to
+	MEMBER_TYPE_FORCES_BLK.
 
-        * config/ia64/hpux.h (MEMBER_TYPE_FORCES_BLK): Same.
+	* config/ia64/hpux.h (MEMBER_TYPE_FORCES_BLK): Same.
 
-        * config/c4x/c4x.h (MEMBER_TYPE_FORCES_BLK): Same.
+	* config/c4x/c4x.h (MEMBER_TYPE_FORCES_BLK): Same.
 
 2002-06-14  Jeff Sturm  <jsturm@one-point.com>
 
