--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-06-19  Phil Edwards  <pme@gcc.gnu.org>
+
+	* configure, .cvsignore:  Revert previous change...
+	* Makefile:  ...delete.
+
 2002-06-19  Nathanael Nerode  <neroden@twcny.rr.com>
 
 	* configure.in: Eliminate ${gasdir} variable.
