* Makefile.in (unstrap, restrap): New targets.         (bootstrap): Mention restrap.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@54795 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-06-19  Jason Merrill  <jason@redhat.com>
+
+	* Makefile.in (unstrap, restrap): New targets.
+	(bootstrap): Mention restrap.
+
 2002-06-19  Ian Dall  <ian@sibyl.beware.dropbear.id.au>
 
 	* config/ns32k/ns32k.md: Give "*xxx" names to all unnamed insn's.
