--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-06-19  Andrew Pinski <pinskia@physics.uc.edu>
+
+        * cpptrad.c (_cpp_replacement_text_len): initialize len.
+
 2002-06-19  Jason Merrill  <jason@redhat.com>
 
 	* Makefile.in (unstrap, restrap): New targets.
