* doc/tm.texi (TARGET_CPU_CPP_BUILTINS): Correct misnamings of 	builtin_define and builtin_define_std.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@54798 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -7,6 +7,13 @@
 	* Makefile.in (unstrap, restrap): New targets.
 	(bootstrap): Mention restrap.
 
+2002-06-19  Matt Kraai  <kraai@alumni.cmu.edu>
+
+	* except.c (ehl_free): Remove.
+
+	* doc/tm.texi (TARGET_CPU_CPP_BUILTINS): Correct misnamings of
+	builtin_define and builtin_define_std.
+
 2002-06-19  Ian Dall  <ian@sibyl.beware.dropbear.id.au>
 
 	* config/ns32k/ns32k.md: Give "*xxx" names to all unnamed insn's.
