--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,12 @@
+2002-06-19  Akim Demaille  <akim@epita.fr>
+
+	* c-parse.in (initelt: identifier ':' initval): Add an empty
+	action to fix a type clash.
+	(aliasdecl, classdef): Add the missing closing `;'.
+	Whitespace changes.
+	* gengtype-yacc.y (typedef_struct): Add an empty action to preevnt
+	$$ = $1 type clashes.
+
 2002-06-19  Eric Christopher  <echristo@redhat.com>
 
 	* config/mips/mips.c (symbol_operand): New function.
@@ -70,7 +79,7 @@
 
 2002-06-19  Andrew Pinski <pinskia@physics.uc.edu>
 
-        * cpptrad.c (_cpp_replacement_text_len): initialize len.
+	* cpptrad.c (_cpp_replacement_text_len): initialize len.
 
 2002-06-19  Jason Merrill  <jason@redhat.com>
 
