--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,11 @@
+2002-06-19  Akim Demaille  <akim@epita.fr>
+
+	* parse.y (TYPENAME): Rename as tTYPENAME to avoid the clash with
+	decl.h's TYPENAME.
+	* spew.c, lex.c: Adjust.
+	* parse.y (explicit_instantiation): Add empty action to override
+	the default $$ = $1 where it introduces a type clash.
+
 2002-06-14  Jason Merrill  <jason@redhat.com>
 
 	* semantics.c (begin_for_stmt): Push the 'for' scope before
@@ -75,8 +83,8 @@
 	* mangle.c (start_mangling): Allocate G.substitutions here...
 	(init_mangle): ... rather than here.
 	(finish_mangling): Clear the varray pointer when done with it.
-	* spew.c (yylexstring): Don't use VARRAY_FREE. 
-	* search.c (bfs_walk): Don't use VARRAY_FREE. 
+	* spew.c (yylexstring): Don't use VARRAY_FREE.
+	* search.c (bfs_walk): Don't use VARRAY_FREE.
 	* decl2.c (pending_statics): Use gengtype to mark.
 	(deferred_fns): Likewise.
 	(ssdf_decls): Likewise.
@@ -988,7 +996,7 @@
 
 2002-03-21  Aldy Hernandez  <aldyh@redhat.com>
 
-        * tree.c (cp_cannot_inline_tree_fn): Same.
+	* tree.c (cp_cannot_inline_tree_fn): Same.
 
 2002-03-21  Neil Booth  <neil@daikokuya.demon.co.uk>
 
@@ -1306,10 +1314,10 @@
 
 2002-02-21  Aldy Hernandez  <aldyh@redhat.com>
 
-        * cp/decl.c (duplicate_decls): Merge always_inline attribute.
+	* cp/decl.c (duplicate_decls): Merge always_inline attribute.
 
-        * cp/tree.c (cp_cannot_inline_tree_fn): Do not inline at -O0
-        unless DECL_ALWAYS_INLINE.
+	* cp/tree.c (cp_cannot_inline_tree_fn): Do not inline at -O0
+	unless DECL_ALWAYS_INLINE.
 
 2002-02-20  Jakub Jelinek  <jakub@redhat.com>
 
