--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-06-19  Dhananjay R. Deshpande  <dhananjayd@kpit.com>
+
+	* config/h8300/h8300.c (TARGET_INSERT_ATTRIBUTES): Define.
+	(h8300_insert_attributes): New.
+
 2002-06-19  Akim Demaille  <akim@epita.fr>
 
 	* c-parse.in (initelt: identifier ':' initval): Add an empty
