* i386.md (xorqi_1_slp, xorqi_2_slp): New patterns.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@54826 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/config/i386/i386.md
+++ b/gcc/config/i386/i386.md
@@ -8830,6 +8830,16 @@
   [(set_attr "type" "alu")
    (set_attr "mode" "QI,QI,SI")])
 
+(define_insn "*xorqi_1_slp"
+  [(set (strict_low_part (match_operand:QI 0 "nonimmediate_operand" "+qm,q"))
+	(xor:QI (match_dup 0)
+		(match_operand:QI 1 "general_operand" "qi,qmi")))
+   (clobber (reg:CC 17))]
+  "! TARGET_PARTIAL_REG_STALL || optimize_size"
+  "xor{b}\t{%1, %0|%0, %1}"
+  [(set_attr "type" "alu1")
+   (set_attr "mode" "QI")])
+
 (define_insn "xorqi_ext_0"
   [(set (zero_extract:SI (match_operand 0 "ext_register_operand" "=Q")
 			 (const_int 8)
@@ -8915,6 +8925,19 @@
    && ix86_binary_operator_ok (XOR, QImode, operands)"
   "xor{b}\t{%2, %0|%0, %2}"
   [(set_attr "type" "alu")
+   (set_attr "mode" "QI")])
+
+(define_insn "*xorqi_2_slp"
+  [(set (reg 17)
+	(compare (xor:QI (match_operand:QI 0 "nonimmediate_operand" "+q,qm")
+			 (match_operand:QI 1 "general_operand" "qim,qi"))
+		 (const_int 0)))
+   (set (strict_low_part (match_dup 0))
+	(xor:QI (match_dup 0) (match_dup 1)))]
+  "(! TARGET_PARTIAL_REG_STALL || optimize_size)
+   && ix86_match_ccmode (insn, CCNOmode)"
+  "xor{b}\t{%1, %0|%0, %1}"
+  [(set_attr "type" "alu1")
    (set_attr "mode" "QI")])
 
 (define_insn "*xorqi_cc_2"
