--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Thu Jun 20 12:14:01 CEST 2002  Jan Hubicka  <jh@suse.cz>
+
+	* i386.md (xorqi_1_slp, xorqi_2_slp): New patterns.
+
 2002-05-20  Richard Henderson  <rth@redhat.com>
 
 	* c-common.c (c_common_get_alias_set): Correctly handle characters.
