--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Thu Jun 20 17:25:29 CEST 2002  JAn HUbicka  <jh@suse.cz>
+
+	* combine.c (subst): Be prepared for simplify_subreg to return VOIDmode.
+
 2002-06-20  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>
 
 	* config/sol2.h: New file.
