ada: 	* utils.c (init_gigi_decls): Use ARRAY_SIZE in lieu of explicit 	array size calculation.
gcc:
	* c-decl.c (c_decode_option): Use ARRAY_SIZE in lieu of explicit
	array size calculation.
	* gengtype.c (NUM_BASE_FILES, create_file, write_gc_root):
	Likewise.

cp:
	* spew.c (remove_last_token): Use ARRAY_SIZE in lieu of explicit
	array size calculation.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@54842 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,10 @@
 2002-06-20  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
+	* c-decl.c (c_decode_option): Use ARRAY_SIZE in lieu of explicit
+	array size calculation.
+	* gengtype.c (NUM_BASE_FILES, create_file, write_gc_root):
+	Likewise.
+
 	* diagnostic.c (diagnostic_kind_text): Const-ify.
 	* gengtype.c (lang_names): Likewise.
 
