--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-06-20  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>
+
+	* config/sparc/t-crtfm (crtfastmath.o): Prefix with $(T) for
+	multilibs.
+	* config/sparc/t-sol2-64 (EXTRA_MULTILIB_PARTS): Add crtfastmath.o.
+
 Thu Jun 20 19:42:21 CEST 2002  Jan Hubicka  <jh@suse.cz>
 			       Pavel Nejedly  <bim@atrey.karlin.mff.cuni.cz>
 
