* combine.c (make_extraction): Reapply to the argument of an ASHIFT.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@54846 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-06-20  Richard Sandiford  <rsandifo@redhat.com>
+
+	* combine.c (make_extraction): Reapply to the argument of an ASHIFT.
+
 2002-06-20  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>
 
 	* config/sparc/t-crtfm (crtfastmath.o): Prefix with $(T) for
