* MAINTAINERS (Write After Approval): Add self.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@54853 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-06-20  Steve Ellcey  <sje@cup.hp.com>
+
+	* MAINTAINERS (Write After Approval): Add self.
+
 2002-06-19  Nathanael Nerode  <neroden@twcny.rr.com>
 
 	* configure.in: replace ${topsrcdir} with ${srcdir}
