cppexp.c (cpp_interpret_integer): Don't force traditional numbers to be unsigned.
	* cppexp.c (cpp_interpret_integer): Don't force traditional
	numbers to be unsigned.
	* cpplib.c (prepare_directive_trad): Set line number for
	diagnostics.
	* cpptrad.c (scan_out_logical_line): Continue scanning out
	at start of buffer.
	* gcc.c (trad_capable_cpp): Use cc1 always.
f:
	* lang-specs.h: Use cc1 for traditional preprocessing.
testsuite:
	* gcc.dg/cpp/assert_trad1.c, gcc.dg/cpp/assert_trad2.c,
	gcc.dg/cpp/assert_trad3.c, gcc.dg/cpp/defined_trad.c,
	gcc.dg/cpp/hash2.c, gcc.dg/cpp/tr-define.c, gcc.dg/cpp/tr-direct.c,
	gcc.dg/cpp/tr-sign.c, gcc.dg/cpp/tr-str.c, gcc.dg/cpp/uchar-2.c:
	Remove.

From-SVN: r54856

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,13 @@
+2002-06-20  Neil Booth  <neil@daikokuya.co.uk>
+
+	* cppexp.c (cpp_interpret_integer): Don't force traditional
+	numbers to be unsigned.
+	* cpplib.c (prepare_directive_trad): Set line number for
+	diagnostics.
+	* cpptrad.c (scan_out_logical_line): Continue scanning out
+	at start of buffer.
+	* gcc.c (trad_capable_cpp): Use cc1 always.
+
 2002-06-20  Jeffrey Law  <law@redhat.com>
 
 	* i386.h (TARGET_DEFAULT): Do not turn on frame pointer
