--- a/gcc/f/ChangeLog
+++ b/gcc/f/ChangeLog
@@ -1,3 +1,7 @@
+Thu Jun 20 21:56:34 2002  Neil Booth  <neil@daikokuya.co.uk>
+
+	* lang-specs.h: Use cc1 for traditional preprocessing.
+
 2002-06-20  Andreas Jaeger  <aj@suse.de>
 
 	* com.c (ffecom_prepare_expr_,ffecom_expr_power_integer_):
