--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-06-20  Chris Demetriou  <cgd@broadcom.com>
+
+	* config/mips/mips.h (ISA_HAS_FP4): Fix comment to reflect use.
+
 2002-06-20  Stan Shebs  <shebs@apple.com>
 
 	* dominance.c: Include errors.h instead of error.h.
