2002-06-20  Chris Demetriou  <cgd@broadcom.com>
	* config.gcc (mipsisa64-*-elf*, mipsisa64el-*-elf*): New targets.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@54860 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2002-06-20  Chris Demetriou  <cgd@broadcom.com>
 
+	* config.gcc (mipsisa64-*-elf*, mipsisa64el-*-elf*): New targets.
+
+2002-06-20  Chris Demetriou  <cgd@broadcom.com>
+
 	* config/mips/mips.h (ISA_HAS_FP4): Fix comment to reflect use.
 
 2002-06-20  Stan Shebs  <shebs@apple.com>
