--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-06-20  Richard Henderson  <rth@redhat.com>
+
+	* explow.c (probe_stack_range): Use gen_rtx_fmt_ee.
+
 2002-06-20  Chris Demetriou  <cgd@broadcom.com>
 
 	* config.gcc (mipsisa64-*-elf*, mipsisa64el-*-elf*): New targets.
