--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,9 @@
+2002-06-20  Richard Henderson  <rth@redhat.com>
+
+	PR c++/6747
+        * typeck.c (mark_addressable): Don't test TREE_ADDRESSABLE early.
+        Call put_var_into_stack.
+
 2002-06-20  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* spew.c (remove_last_token): Use ARRAY_SIZE in lieu of explicit
