--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,11 @@
 2002-06-20  Richard Henderson  <rth@redhat.com>
 
+	PR target/4041
+	* config/m68k/m68k.md (zero_extendsidi2): Create expander; duplicate
+	pattern and adjust constraints for coldfire.
+
+2002-06-20  Richard Henderson  <rth@redhat.com>
+
 	* explow.c (probe_stack_range): Use gen_rtx_fmt_ee.
 
 2002-06-20  Chris Demetriou  <cgd@broadcom.com>
