--- a/gcc/config/m68k/m68k.md
+++ b/gcc/config/m68k/m68k.md
@@ -1532,8 +1532,8 @@
   "")
 
 (define_insn "*zero_extendsidi2_cf"
-  [(set (match_operand:DI 0 "nonimmediate_operand" "=r,o")
-    (zero_extend:DI (match_operand:SI 1 "general_operand" "ro,r")))]
+  [(set (match_operand:DI 0 "nonimmediate_operand" "=r,m")
+    (zero_extend:DI (match_operand:SI 1 "general_operand" "rm,r")))]
   "TARGET_5200"
   "*
 {
@@ -1556,8 +1556,8 @@
 }")
 
 (define_insn "*zero_extendsidi2"
-  [(set (match_operand:DI 0 "nonimmediate_operand" "=ro")
-    (zero_extend:DI (match_operand:SI 1 "general_operand" "ro")))]
+  [(set (match_operand:DI 0 "nonimmediate_operand" "=rm")
+    (zero_extend:DI (match_operand:SI 1 "general_operand" "rm")))]
   "!TARGET_5200"
   "*
 {
