--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2002-06-20  John David Anglin  <dave@hiauly1.hia.nrc.ca>
+
+	* pa-protos.h (pa_asm_output_mi_thunk): Change third argument to
+	HOST_WIDE_INT.
+	* pa.c (pa_asm_output_mi_thunk): Likewise.
+	(n_deferred_plabels): Change type to size_t.
+	(output_deferred_plabels, output_call): Use size_t instead of int.
+
 2002-06-20  Richard Henderson  <rth@redhat.com>
 
 	PR target/4041
